--- a/Python3Commands.ipynb
+++ b/Python3Commands.ipynb
@@ -30,9 +30,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 102
         },
-        "outputId": "d34dd5af-a8a2-49f4-c133-fafa1421a5f0"
+        "outputId": "2a412411-cb99-4155-bb5d-763959cfbe7e"
       },
       "cell_type": "code",
       "source": [
@@ -49,14 +49,30 @@
         "  \n",
         "# printing resultant values  \n",
         "print (\"The zipped result is : \",end=\"\") \n",
-        "print (mapped)"
+        "print (mapped)\n",
+        "nam, roll_no, markz = zip(*mapped) \n",
+        "  \n",
+        "print (\"The unzipped result: \\n\",end=\"\") \n",
+        "  \n",
+        "print (\"The name list is : \",end=\"\") \n",
+        "print (nam) \n",
+        "  \n",
+        "print (\"The roll_no list is : \",end=\"\") \n",
+        "print (roll_no) \n",
+        "  \n",
+        "print (\"The marks list is : \",end=\"\") \n",
+        "print (markz) "
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The zipped result is : {('Anil', 2, 100), ('Ani', 1, 90)}\n"
+            "The zipped result is : {('Anil', 2, 100), ('Ani', 1, 90)}\n",
+            "The unzipped result: \n",
+            "The name list is : ('Anil', 'Ani')\n",
+            "The roll_no list is : (2, 1)\n",
+            "The marks list is : (100, 90)\n"
           ],
           "name": "stdout"
         }
