--- a/Python3Commands.ipynb
+++ b/Python3Commands.ipynb
@@ -77,6 +77,52 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "OZfov4AlZfH3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 224
+        },
+        "outputId": "03c145d1-db09-4e1f-dec5-c278d2d13a9e"
+      },
+      "cell_type": "code",
+      "source": [
+        "!apt-get install -y -qq software-properties-common python-software-properties module-init-tools\n",
+        "!add-apt-repository -y ppa:alessandro-strada/ppa 2>&1 > /dev/null\n",
+        "!apt-get update -qq 2>&1 > /dev/null\n",
+        "!apt-get -y install -qq google-drive-ocamlfuse fuse\n",
+        "from google.colab import auth\n",
+        "auth.authenticate_user()\n",
+        "from oauth2client.client import GoogleCredentials\n",
+        "creds = GoogleCredentials.get_application_default()\n",
+        "import getpass\n",
+        "!google-drive-ocamlfuse -headless -id={creds.client_id} -secret={creds.client_secret} < /dev/null 2>&1 | grep URL\n",
+        "vcode = getpass.getpass()\n",
+        "!echo {vcode} | google-drive-ocamlfuse -headless -id={creds.client_id} -secret={creds.client_secret}"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "E: Package 'python-software-properties' has no installation candidate\n",
+            "Selecting previously unselected package google-drive-ocamlfuse.\n",
+            "(Reading database ... 131352 files and directories currently installed.)\n",
+            "Preparing to unpack .../google-drive-ocamlfuse_0.7.1-0ubuntu3~ubuntu18.04.1_amd64.deb ...\n",
+            "Unpacking google-drive-ocamlfuse (0.7.1-0ubuntu3~ubuntu18.04.1) ...\n",
+            "Setting up google-drive-ocamlfuse (0.7.1-0ubuntu3~ubuntu18.04.1) ...\n",
+            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
+            "Please, open the following URL in a web browser: https://accounts.google.com/o/oauth2/auth?client_id=32555940559.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive&response_type=code&access_type=offline&approval_prompt=force\n",
+            "··········\n",
+            "Please, open the following URL in a web browser: https://accounts.google.com/o/oauth2/auth?client_id=32555940559.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive&response_type=code&access_type=offline&approval_prompt=force\n",
+            "Please enter the verification code: Access token retrieved correctly.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
